fix: Async and Stream Writer refactored.